fix: remove min-height from main content and adjust overflow properties in positions styles

--- a/packages/trader/src/AppV2/Containers/AppShell/app-shell.scss
+++ b/packages/trader/src/AppV2/Containers/AppShell/app-shell.scss
@@ -21,7 +21,6 @@
     &__main-content {
         flex: 1;
         min-width: 0;
-        min-height: 0;
 
         @include mobile-screen {
             margin-left: 0;
